# bones

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  meson.build  meson_options.txt
profiles/: linux-clang-mold.ini  linux-clang.ini
src/: main.cpp
